--- a/app/code/Shellpea/Content/view/frontend/layout/catalog_product_view.xml
+++ b/app/code/Shellpea/Content/view/frontend/layout/catalog_product_view.xml
@@ -2,7 +2,20 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content.top">
-            <block class="Magento\Framework\View\Element\Template" name="content_index_index" template="Shellpea_Content::qwe.phtml" />
+            <block class="Magento\Framework\View\Element\Template" name="content_index_index" template="Shellpea_Content::index.phtml">
+                <arguments>
+                    <argument name="test" xsi:type="string" translate="true">orange</argument>
+                </arguments>
+            </block>
         </referenceContainer>
+
+        <!-- <referenceBlock name="content_index_index">
+            <block class="Magento\Framework\View\Element\Html\Link">
+                <arguments>
+                    <argument name="test" xsi:type="string" translate="true">footer links"</argument>
+                </arguments>
+            </block>
+        </referenceBlock> -->
+
     </body>
 </page>
