--- a/app/code/Shellpea/Content/view/frontend/templates/index.phtml
+++ b/app/code/Shellpea/Content/view/frontend/templates/index.phtml
@@ -1,3 +1,3 @@
 <div style="background-color: #000">
-    <h2 style="color: lightskyblue">Hello World</h2>
+    <h2 style="color: <?php if(!$block->getTest()) { echo "lightskyblue"; } else { echo $block->getTest(); } ?>">Hello World</h2>
 </div>
