--- a/app/code/Shellpea/ActionName/view/frontend/templates/index.phtml
+++ b/app/code/Shellpea/ActionName/view/frontend/templates/index.phtml
@@ -1,4 +1,1 @@
-<div data-mage-init='{"action": {"message": "HELLO WORLD!"}}' />
-<div id="action" style="display: none;">
-        <h2> <?php echo $block->actionName(); ?> </h2>
-</div>
+<div data-mage-init='{"action": {"action": "<?php echo $block->actionName(); ?>"}}' />
