--- a/app/code/Shellpea/HalloWorld/view/frontend/layout/default.xml
+++ b/app/code/Shellpea/HalloWorld/view/frontend/layout/default.xml
@@ -11,8 +11,8 @@
                                     <item name="children" xsi:type="array">
                                         <item name="subtotal" xsi:type="array">
                                             <item name="children" xsi:type="array">
-                                                <item name="subtotal.totals" xsi:type="array">
-                                                    <item name="component" xsi:type="string">Shellpea_HalloWorld/js/view/content</item>
+                                                <item name="subtotal.totals.before" xsi:type="array">
+                                                    <item name="component" xsi:type="string">Magento_Checkout/js/view/checkout/minicart/subtotal/totals</item>
                                                     <item name="config" xsi:type="array">
                                                         <item name="template" xsi:type="string">Shellpea_HalloWorld/minicart/content</item>
                                                     </item>
